Red Light data set ready for Postgres.

--- a/red_light_violations.ipynb
+++ b/red_light_violations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -11,22 +11,14 @@
      "text": [
       "Requirement already satisfied: folium in c:\\users\\kaleb\\anaconda3\\lib\\site-packages (0.11.0)\n",
       "Requirement already satisfied: numpy in c:\\users\\kaleb\\anaconda3\\lib\\site-packages (from folium) (1.18.5)\n",
-      "Requirement already satisfied: branca>=0.3.0 in c:\\users\\kaleb\\anaconda3\\lib\\site-packages (from folium) (0.4.1)\n",
       "Requirement already satisfied: requests in c:\\users\\kaleb\\anaconda3\\lib\\site-packages (from folium) (2.24.0)\n",
+      "Requirement already satisfied: branca>=0.3.0 in c:\\users\\kaleb\\anaconda3\\lib\\site-packages (from folium) (0.4.1)\n",
       "Requirement already satisfied: jinja2>=2.9 in c:\\users\\kaleb\\anaconda3\\lib\\site-packages (from folium) (2.11.2)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\kaleb\\anaconda3\\lib\\site-packages (from requests->folium) (2020.6.20)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in c:\\users\\kaleb\\anaconda3\\lib\\site-packages (from requests->folium) (3.0.4)\n",
       "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\kaleb\\anaconda3\\lib\\site-packages (from requests->folium) (1.25.9)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in c:\\users\\kaleb\\anaconda3\\lib\\site-packages (from requests->folium) (3.0.4)\n",
       "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\kaleb\\anaconda3\\lib\\site-packages (from requests->folium) (2.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\kaleb\\anaconda3\\lib\\site-packages (from requests->folium) (2020.6.20)\n",
       "Requirement already satisfied: MarkupSafe>=0.23 in c:\\users\\kaleb\\anaconda3\\lib\\site-packages (from jinja2>=2.9->folium) (1.1.1)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Could not find a version that satisfies the requirement excel_writer (from versions: none)\n",
-      "ERROR: No matching distribution found for excel_writer\n"
      ]
     }
    ],
@@ -37,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +63,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 74,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -150,7 +144,7 @@
        "4       1 E 75TH STREET  41.758074 -87.624672       28836"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,11 +156,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"'hello'\""
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_quotes(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "viol_red_light[\"ADDRESS\"] = viol_red_light.ADDRESS.apply(add_quotes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_quotes(address):\n",
+    "    address = \"'\"+address+\"'\"\n",
+    "    return address"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "viol_red_light.to_csv(r\"C:\\Users\\Kaleb\\education-and-traffic\\.ipynb_checkpoints\\viol_red_light.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            0 N ASHLAND AVE\n",
+       "1       0 N HAMLIN BOULEVARD\n",
+       "2         0 S CENTRAL AVENUE\n",
+       "3                1 E 63RD ST\n",
+       "4            1 E 75TH STREET\n",
+       "               ...          \n",
+       "294    9500 S ASHLAND AVENUE\n",
+       "295     9500 S COTTAGE GROVE\n",
+       "296    9500 S HALSTED STREET\n",
+       "297       9500 S JEFFERY AVE\n",
+       "298        9900 S HALSTED ST\n",
+       "Name: ADDRESS, Length: 299, dtype: object"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "viol_red_light.ADDRESS"
    ]
   },
   {
